# griptape-docs

./: .gitignore  .readthedocs.yml  Makefile  README.md  griptape.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: dev-pull-request-links.yml  generate-pdf-docs.yml  integration-tests.yml  pull-request-links-dev.yml  pull-request-links-prod.yml  pull-request-links.yml  readthedocs-build-dev.yml  readthedocs-build-prod.yml  readthedocs-build.yml  readthedocs-dev-build.yml
docs/: contributing.md  faq.md  gen_ref_pages.py  index.md
docs/assets/: Griptape.openapi.yml
docs/blog/: .authors.yml  index.md
docs/docs/: index.md
docs/examples/: count-tokens.md  load-and-query-pinecone.md  load-query-and-chat-marqo.md  multiple-agent-shared-memory.md  physics-tutor.md  query-webpage.md  store-conversation-memory-in-dynamodb.md  talk-to-a-pdf.md  talk-to-a-webpage.md  talk-to-redshift.md  talk-to-sql.md  talk_to_text_gen.md  using-text-generation-web-ui.md
docs/getting_started/: index.md  tools.md
docs/griptape/: index.md  quick_start.md
docs/griptape-cloud/: dev-preview-faq.md  index.md  terms-of-service.md
docs/griptape-core/: index.md  quick-start.md
docs/griptape-flow/: index.md  memory.md  serialization.md  workflows.md
docs/griptape-framework/: agents.md  cot-and-tools.md  custom-tools.md  index.md  memory.md  pipelines.md  quick-start.md  ramps.md  rulesets.md  serialization.md  workflows.md
docs/griptape-tools/: index.md  overview.md
docs/griptape_core/: custom_tools.md  quick_start.md
docs/griptape_flow/: cot_and_tools.md  index.md  pipelines.md  quick_start.md
docs/griptape_tools/: index.md  overview.md
docs/plugins/: swagger_ui_plugin.py
docs/skatepark/: cot_and_tools.md  index.md  memory.md  pipelines.md  quick_start.md  serialization.md  structures.md  tools.md
(+119 files in other folders)
