[tool.poetry]
name = "griptape-docs"
version = "0.20.0"
description = ""
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/griptape-ai/griptape-docs"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.8"
mkdocs-glightbox = "^0.3.4"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.6"
pymdown-extensions = "^10.3"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mktestdocs = "^0.2.1"
pytest = "^7.4.1"
griptape = {git = "https://github.com/griptape-ai/griptape", rev = "dev"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
